--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.4.1",
     "canvasjs": "^1.8.3",
     "global": "^4.4.0",
     "react": "^16.12.0",
@@ -13,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "reactstrap": "^8.2.0",
     "serve": "^11.3.0"
   },
   "scripts": {
