--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "canvasjs": "^1.8.3",
+    "d3": "^5.15.0",
     "global": "^4.4.0",
     "react": "^16.12.0",
     "react-charts": "^2.0.0-beta.6",
+    "react-d3": "^0.4.0",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
